--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://learntechcafe.com/
+baseURL: https://learntechcafe.netlify.app/
 languageCode: en-CA
 title: Learn Tech Cafe
 theme: PaperMod
