update base url to .com

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://learntechcafe.netlify.app"
+baseURL: "https://learntechcafe.com"
 languageCode: en-CA
 title: Learn Tech Cafe
 theme: PaperMod
