--- a/config.yaml
+++ b/config.yaml
@@ -12,13 +12,14 @@ params:
   homeInfoParams:
     Title: Cultivating Computer Curiosity
     Content: | 
-      Hello there, we're your hosts, Dan and Robo. Grab a fresh cup of your favourite beverage and relax as we explore
-      computers in a fun, beginner-friendly, stress-free way. This blog is made for learners, experimenters and
-      tech-curious minds. If you're eager to discover what computers can do - and what *you* can do with them - 
-      you've come to the right place. [Learn more about us in our about page.](/about/)
+      Welcome to LearnTechCafe! I'm your host, Dan - and alongside me is my robotic co-host, ABA5! Grab a fresh cup of your
+      favourite beverage and relax as we explore computers in a fun, stress-free and beginner-friendly. This
+      blog is for money-savers, lifelong learners and anyone eager to discover what computers can do - and what
+      *you* can do with them. In this increasingly expensive world, we'll show you how you can save money using 
+      free and/or open-source tools while building digital skils. Want to know more about me? [Learn more about me in the About page.](/about/)
     RoboQuote: |
       &nbsp;
-      <div align="center">| 🤖 <em>Beep boop. Learning is just debugging your brain.</em></div>
+      <div align="center">| 🤖 <em>Welcome, patron, to our cafe..</em></div>
   defaultTheme: auto # to switch between dark or light according to browser theme
   # ShowShareButtons: true---I don't have socials!
   ShowReadingTime: true
